apps/liveness/base/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: liveness-nginx-ingress
  namespace: app
  labels:
    app: liveness
  annotations:
    nginx.ingress.kubernetes.io/upstream-hash-by: "$http_session_id"
    nginx.ingress.kubernetes.io/upstream-hash-by-subset: "true"
    nginx.ingress.kubernetes.io/upstream-hash-by-subset-size: "3"
spec:
  ingressClassName: nginx
  rules:
  - host: liveness.internal-services
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: liveness-service
            port:
              number: 5050
